--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests to run.\"",
+    "start": "node server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC"
 }
+
